# ktsm

./: .gitignore  CMakeLists.txt  README.md  main.hpp
examples/: CMakeLists.txt  main.hpp
examples/ktsm/: CMakeLists.txt  main.cpp
examples/qt/: CMakeLists.txt
examples/qtsm/: CMakeLists.txt  main.cpp
include/: qglobal.h  qsharedmemory.h  qsharedmemory_p.h  qsystemsemaphore.h
ktsm/: CMakeLists.txt  qsystemsemaphore.cpp  qsystemsemaphore_p.h  qsystemsemaphore_win.cpp
qtsm/: main.cpp
src/: CMakeLists.txt  qsharedmemory.cpp  qsharedmemory_win.cpp
test/: CMakeLists.txt  testktsm.cpp
